[gd_scene load_steps=6 format=3 uid="uid://cx4hatbep7l2s"]

[ext_resource type="Script" path="res://Resources/Skills/skill_class.gd" id="1_s3woo"]
[ext_resource type="Texture2D" uid="uid://ctn37ycsum6fe" path="res://Resources/Art/Skills/building_momentum_skill.png" id="2_114bl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vqwq4"]
size = Vector2(48, 48)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0i5kp"]
bg_color = Color(0.688023, 0.596125, 0.233008, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3x2mh"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[node name="BaseSkill" type="Node2D"]
script = ExtResource("1_s3woo")

[node name="SkillImage" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_114bl")

[node name="UpgradeBorder" type="Sprite2D" parent="."]
unique_name_in_owner = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_vqwq4")

[node name="SkillUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0

[node name="ShopPanel" type="Panel" parent="SkillUI"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = -32.0
offset_top = 6.0
offset_right = -2.0
offset_bottom = 36.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0i5kp")

[node name="ShopLabel" type="Label" parent="SkillUI/ShopPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoLabel" type="Label" parent="SkillUI"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 12)
layout_mode = 0
offset_left = 16.0
offset_top = 39.0
offset_right = 32.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoPanel" type="Panel" parent="SkillUI/InfoLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -2.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3x2mh")

[node name="TooltipPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.921569)
self_modulate = Color(1, 1, 1, 0)
z_index = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="TooltipContainer" type="VBoxContainer" parent="TooltipPanel"]
unique_name_in_owner = true
layout_mode = 1
offset_bottom = 4.0

[connection signal="mouse_entered" from="SkillUI" to="." method="_on_skill_ui_mouse_entered"]
[connection signal="mouse_exited" from="SkillUI" to="." method="_on_skill_ui_mouse_exited"]
